# OGL_misc

./: CMakeLists.txt  README.md  Renderer.cpp  Renderer.hpp  Shader.h  TextRenderer.cpp  TextRenderer.hpp
learnopengl/: CMakeLists.txt  Camera.hpp  README.md
learnopengl/assimp/: Mesh.hpp  Model.hpp
